# cync-lan

./: .gitignore  Dockerfile  LICENSE  LICENSE-3RD-PARTY  README.md  cync-lan.mono.py  cync_mesh_example.yaml  docker-compose.yaml  pyproject.toml  repository.json  setup.cfg
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: container-package-publish.yml  new-pub-rel.yaml
add-on/: repository.json
add-on/cync-lan/: config.yaml
add-on/cync-lan/static/: index.html
docker/: Dockerfile  docker-compose.yaml  example.env
docs/: DNS.md  debugging_setup.md  install.md  known_devices.md  tips.md  troubleshooting.md
hass_add-on/: repository.json
hass_add-on/cync-lan/: Dockerfile  config.yaml
src/: cync-lan.py
src/cync_lan/: __init__.py  cloud_api.py  const.py  devices.py  exporter.py  main.py  mqtt_client.py  server.py  structs.py  utils.py
src/cync_lan/metadata/: __init__.py  model_info.py
static/: index.html
static/css/: animate.min.css  main.min.css  prism-tomorrow.min.css
static/js/: prism-yaml.min.js  prism.min.js
static/src/: input.css
