[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cync_lan"
version = "0.2.0a1"
description = "A Python library for local async MQTT control of Cync/C by GE smart devices"
readme = "README.md"
authors = [{name = "baudneo", email = "86508179+baudneo@users.noreply.github.com"}]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Operating System :: OS Independent",
]
requires-python = ">=3.9"
dependencies = [
    "pyyaml==6.0.2",
    "uvloop>=0.21.0",
    "aiomqtt==2.3.0",
    "aiohttp>=3.10.8",
    "fastapi>=0.115.12",
    "uvicorn>=0.34.3",
    "tzlocal>=5.3.1",
]
[project.optional-dependencies]
dev = [
    "python-dotenv>=1.1.0",
]

[project.scripts]
cync-lan = "cync_lan.main:main"

[project.urls]
Homepage = "https://github.com/baudneo/cync-lan"
Repository = "https://github.com/baudneo/cync-lan"
Issues = "https://github.com/baudneo/cync-lan/issues"