[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cync_lan"
# fixme: isnt in-sync yet, work on CI to set ver on image build
version = "0.0.4b3"
description = "A Python library for local async MQTT control of Cync/C by GE smart devices"
readme = "README.md"
authors = [{name = "baudneo", email = "86508179+baudneo@users.noreply.github.com"}]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
]
requires-python = ">=3.9"
dependencies = [
    "pyyaml==6.0.2",
    "uvloop>=0.21.0",
    "aiomqtt==2.3.0",
    "aiohttp>=3.10.8",
    "fastapi>=0.115.12",
    "uvicorn>=0.34.3",
    "tzlocal>=5.3.1",
]
[project.optional-dependencies]
dev = [
    "python-dotenv>=1.1.0",
]

[project.scripts]
cync-lan = "cync_lan.main:main"

[project.urls]
Homepage = "https://github.com/baudneo/cync-lan"
Repository = "https://github.com/baudneo/cync-lan"
Issues = "https://github.com/baudneo/cync-lan/issues"

[tool.ruff]
# Set the maximum line length to 88 (the industry standard set by Black)
line-length = 88

# Target Python 3.14 based on your project's requires-python
target-version = "py314"

[tool.ruff.lint]
# Enable specific rule sets:
# E: pycodestyle (standard PEP8 formatting errors)
# F: Pyflakes (syntax errors, undefined names, unused imports)
# I: isort (automatically sorts your imports alphabetically and by type)
# B: flake8-bugbear (finds likely bugs and design problems)
# UP: pyupgrade (automatically upgrades older syntax to modern Python 3.9+ syntax)
select = ["E", "F", "I", "B"]

# Ignore specific rules if they get too noisy (leave empty to start)
ignore = []

# Allow Ruff to automatically fix issues when you pass the --fix flag
#fixable = ["ALL"]
#unfixable = []

[tool.ruff.format]
# Enforce standard formatting styles (Drop-in replacement for Black)
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"