[metadata]
name = cync_lan
version = 0.1.11
author = baudneo
author_email = 86508179+baudneo@users.noreply.github.com
description = Local async HTTP/MQTT LAN controller for Cync / C by GE smart devices, designed to integrate with Home Assistant.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/baudneo/cync-lan
project_urls =
    Bug Tracker = https://github.com/baudneo/cync-lan/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
;packages =
;    cync_lan
python_requires = >=3.8
scripts =
    src/cync-lan.py
install_requires =
    setuptools>=69.2.0
    wheel>=0.41.2
    pyyaml>=6.0.1
    uvloop>=0.19.0
    requests>=2.31.0
    aiomqtt>=2.3.0

[options.packages.find]
where = src
